--- a/ext/settings.html
+++ b/ext/settings.html
@@ -2031,9 +2031,13 @@
         <div class="settings-item"><div class="settings-item-inner">
             <div class="settings-item-left">
                 <div class="settings-item-label">
-                    Yezichak can import and export settings files which can be used to restore settings, share settings across devices, and to help to debug problems.
-                    These files will only contain settings and will not contain dictionaries.
-                    Dictionaries must be imported separately.
+                    Yomibaba can import and export settings files which can be
+                    used to restore settings, share settings across devices,
+                    and to help to debug problems.  These files will only
+                    contain settings and will not contain dictionaries.
+                    Dictionaries must be imported separately. However, you can
+                    also import a previously exported collection of
+                    dictionaries. See the next section about that.
                 </div>
             </div>
         </div></div>
@@ -2050,6 +2054,52 @@
                     <div class="settings-item-button-group-item">
                         <button class="low-emphasis danger" id="settings-reset-button">Reset Settings</button>
                     </div>
+                </div>
+            </div>
+        </div></div>
+        <div class="settings-item"><div class="settings-item-inner">
+            <div class="settings-item-left">
+                <div class="settings-item-label">
+                    You can try to export the entire collection of your
+                    dictionaries into a single large file that you can try to
+                    import from other browsers or devices. Importing the
+                    collection like that is a destructive operation and will
+                    replace your current database of dictionaries so please
+                    proceed with caution. These operations can take a lot of
+                    time depending on the size of your collection, especially at
+                    the start and at the end, so have patience.
+
+                    <br><br>
+
+                    See <a href="https://github.com/forsakeninfinity/yomichan-data-exporter" target="_blank" rel="noopener noreferrer">yomichan-data-exporter</a> for
+                    instructions to export your data from older Yomichan installations.
+                </div>
+            </div>
+        </div></div>
+        <div class="settings-item"><div class="settings-item-inner">
+            <div class="settings-item-right settings-item-button-group-container">
+                <div class="settings-item-button-group">
+                    <div class="settings-item-button-group-item">
+                        <button class="low-emphasis" id="settings-import-db-button">Import Dictionary Collection</button>
+                        <div hidden><input type="file" id="settings-import-db" accept=".json,application/json"></div>
+                    </div>
+                    <div class="settings-item-button-group-item">
+                        <button class="low-emphasis" id="settings-export-db-button">Export Dictionary Collection</button>
+                    </div>
+                </div>
+            </div>
+        </div></div>
+        <div class="settings-item"><div class="settings-item-inner">
+            <div class="settings-item-left">
+                <div class="settings-item-progress-report" id="db-ops-progress-report">
+                    Placeholder text.
+                </div>
+            </div>
+        </div></div>
+        <div class="settings-item"><div class="settings-item-inner">
+            <div class="settings-item-left">
+                <div class="settings-item-error-report" id="db-ops-error-report">
+                    Placeholder text.
                 </div>
             </div>
         </div></div>
@@ -3801,6 +3851,10 @@
 
 
 <!-- Scripts -->
+<script src="/lib/dexie.min.js"></script>
+
+<script src="/lib/dexie-export-import.min.js"></script>
+
 <script src="/lib/wanakana.min.js"></script>
 
 <script src="/js/core.js"></script>
