👅 change strings to Yezichak

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -2031,7 +2031,7 @@
         <div class="settings-item"><div class="settings-item-inner">
             <div class="settings-item-left">
                 <div class="settings-item-label">
-                    Yomibaba can import and export settings files which can be
+                    Yezichak can import and export settings files which can be
                     used to restore settings, share settings across devices,
                     and to help to debug problems.  These files will only
                     contain settings and will not contain dictionaries.
