--- a/ext/template-renderer.html
+++ b/ext/template-renderer.html
@@ -11,6 +11,14 @@
     <link rel="icon" type="image/png" href="/images/icon48.png" sizes="48x48">
     <link rel="icon" type="image/png" href="/images/icon64.png" sizes="64x64">
     <link rel="icon" type="image/png" href="/images/icon128.png" sizes="128x128">
+    <script type="importmap">{"imports":{
+"dexie": "./lib/dexie.js",
+"handlebars": "./lib/handlebars.js",
+"parse5": "./lib/parse5.js",
+"wanakana": "./lib/wanakana.js",
+"validate-schemas": "./lib/validate-schemas.js",
+"zip.js": "./lib/zip.js"
+}}</script>
 </head>
 <body>
 
