--- a/ext/permissions.html
+++ b/ext/permissions.html
@@ -14,6 +14,14 @@
     <link rel="stylesheet" type="text/css" href="/css/material.css">
     <link rel="stylesheet" type="text/css" href="/css/settings.css">
     <link rel="stylesheet" type="text/css" href="/css/permissions.css">
+    <script type="importmap">{"imports":{
+"dexie": "./lib/dexie.js",
+"handlebars": "./lib/handlebars.js",
+"parse5": "./lib/parse5.js",
+"wanakana": "./lib/wanakana.js",
+"validate-schemas": "./lib/validate-schemas.js",
+"zip.js": "./lib/zip.js"
+}}</script>
 </head>
 <body>
 
