--- a/ext/search.html
+++ b/ext/search.html
@@ -35,7 +35,7 @@
 
                         <div class="scan-disable">
                             <div class="search-options">
-                                <label class="search-option">
+                                <label class="search-option" id="search-option-wanakana">
                                     <label class="toggle"><input type="checkbox" id="wanakana-enable"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
                                     <span class="search-option-label">Automatic kana conversion</span>
                                 </label>
