--- a/ext/action-popup.html
+++ b/ext/action-popup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Yomichan Action Popup</title>
+    <title>Yezichak Action Popup</title>
     <link rel="tongue.png" sizes="16x16">
     <link rel="tongue.png" sizes="19x19">
     <link rel="tongue.png" sizes="32x32">
@@ -19,65 +19,65 @@
     <label class="toggle">
         <input type="checkbox" id="enable-search">
         <div class="toggle-group">
-            <span class="toggle-on">On</span>
-            <span class="toggle-off">Off</span>
+            <span class="toggle-on" i18n="actionPopup.on">On</span>
+            <span class="toggle-off" i18n="actionPopup.off">Off</span>
             <span class="toggle-handle"></span>
         </div>
     </label>
     <div class="nav-button-container">
-        <button class="nav-button action-select-profile" title="Change primary profile" hidden>
+        <button class="nav-button action-select-profile" i18n-title="actionPopup.changeProfile" title="Change primary profile" hidden>
             <span class="icon" data-icon="profile"></span>
             <span class="profile-select-container"><select class="profile-select" id="profile-select">
                 <optgroup label="Primary Profile" id="profile-select-option-group"></optgroup>
             </select></span>
         </button>
-        <a tabindex="0" class="nav-button action-open-settings" title="Settings" data-hotkey='["global:openSettingsPage","title","Settings ({0})"]'>
+        <a tabindex="0" class="nav-button action-open-settings" i18n-title="pages.Settings" title="Settings" data-hotkey='["global:openSettingsPage","title","Settings ({0})"]'>
             <span class="icon" data-icon="cog"></span>
             <div class="nav-button-warning-badge no-dictionaries-enabled-warning" hidden>
                 <div class="nav-button-warning-badge-outer"></div>
                 <div class="nav-button-warning-badge-inner"></div>
             </div>
         </a>
-        <a tabindex="0" class="nav-button action-open-permissions" title="Permissions" hidden>
+        <a tabindex="0" class="nav-button action-open-permissions" i18n-title="pages.Permissions" title="Permissions" hidden>
             <span class="icon" data-icon="key"></span>
             <div class="nav-button-warning-badge permissions-required-warning" hidden>
                 <div class="nav-button-warning-badge-outer"></div>
                 <div class="nav-button-warning-badge-inner"></div>
             </div>
         </a>
-        <a tabindex="0" class="nav-button action-open-search" title="Search" data-hotkey='["global:openSearchPage","title","Search ({0})\nShift+click to open here"]'>
+        <a tabindex="0" class="nav-button action-open-search" i18n-title="pages.Search" title="Search" data-hotkey='["global:openSearchPage","title","Search ({0})\nShift+click to open here"]'>
             <span class="icon" data-icon="magnifying-glass"></span>
         </a>
-        <a tabindex="0" class="nav-button action-open-info" title="Information" data-hotkey='["global:openInfoPage","title","Information ({0})"]'>
+        <a tabindex="0" class="nav-button action-open-info" i18n-title="pages.Information" title="Information" data-hotkey='["global:openInfoPage","title","Information ({0})"]'>
             <span class="icon" data-icon="question-mark-circle"></span>
         </a>
     </div>
 </div>
 
 <div id="full">
-    <h3 id="extension-info">Yomichan</h3>
+    <h3 id="extension-info">Yezichak</h3>
     <label class="link-group">
-        <span class="link-group-icon"><input type="checkbox" id="enable-search2"></span><span class="link-group-label">Enable content scanning</span>
+        <span class="link-group-icon"><input type="checkbox" id="enable-search2"></span><span class="link-group-label" i18n="settings.general.enableScanning">Enable content scanning</span>
     </label>
     <a tabindex="0" class="link-group action-open-settings">
         <span class="link-group-icon" data-icon="chevron"></span>
-        <span class="link-group-label">Settings</span>
+        <span class="link-group-label" i18n="pages.Settings">Settings</span>
         <span class="link-group-badge">
             <div class="flex-margin-left warning-badge no-dictionaries-enabled-warning" hidden><span class="icon" data-icon="exclamation-point-short"></span></div>
         </span>
     </a>
     <a tabindex="0" class="link-group action-open-permissions" hidden>
         <span class="link-group-icon" data-icon="chevron"></span>
-        <span class="link-group-label">Permissions</span>
+        <span class="link-group-label" i18n="pages.Permissions">Permissions</span>
         <span class="link-group-badge">
             <div class="flex-margin-left warning-badge permissions-required-warning" hidden><span class="icon" data-icon="exclamation-point-short"></span></div>
         </span>
     </a>
     <a tabindex="0" class="link-group action-open-search">
-        <span class="link-group-icon" data-icon="chevron"></span><span class="link-group-label">Search</span>
+        <span class="link-group-icon" data-icon="chevron"></span><span class="link-group-label" i18n="pages.Search">Search</span>
     </a>
     <a tabindex="0" class="link-group action-open-info">
-        <span class="link-group-icon" data-icon="chevron"></span><span class="link-group-label">Information</span>
+        <span class="link-group-icon" data-icon="chevron"></span><span class="link-group-label" i18n="pages.Information">Information</span>
     </a>
 </div>
 
@@ -92,6 +92,7 @@
 <script src="/js/data/permissions-util.js"></script>
 <script src="/js/input/hotkey-help-controller.js"></script>
 <script src="/js/input/hotkey-util.js"></script>
+<script src="/js/language/localization.js"></script>
 
 <script src="/js/pages/action-popup-main.js"></script>
 
