--- a/ext/settings.html
+++ b/ext/settings.html
@@ -931,7 +931,7 @@
                         </select>
                     </div>
                     <div class="settings-item-group-item">
-                        <div class="settings-item-group-item-label" i18n="settings.appearance.theme.shadow,shadow">Shadow</div>
+                        <div class="settings-item-group-item-label" i18n="settings.appearance.theme.shadow.shadow">Shadow</div>
                         <select data-setting="general.popupOuterTheme" class="short-width short-height">
                             <option value="site" i18n="settings.appearance.theme.shadow.auto">Auto</option>
                             <option value="light" i18n="settings.appearance.theme.shadow.light">Light</option>
