--- a/ext/search.html
+++ b/ext/search.html
@@ -49,8 +49,7 @@
                                 </div>
                             </div>
                             <div class="search-textbox-container">
-                                <!-- <textarea id="search-textbox" class="scrollbar" placeholder="Input a term, expression, sentence, or block of text" autocomplete="off" lang="ja" autofocus></textarea> -->
-                                <textarea id="search-textbox" class="scrollbar" placeholder="Input a term, expression, sentence, or block of text" autocomplete="off" spellcheck="false" autofocus></textarea>
+                                <textarea id="search-textbox" class="scrollbar" placeholder="Input a term, expression, sentence, or block of text" autocomplete="off" lang="ja" autofocus></textarea>
                                 <button type="button" id="search-back-button" class="search-button" hidden><span class="icon" data-icon="left-chevron"></span></button>
                                 <button type="button" id="search-button" class="search-button"><span class="icon" data-icon="magnifying-glass"></span></button>
                             </div>
