Replace occurrences of よみちゃん with よみたん

--- a/test/data/html/test-document1.html
+++ b/test/data/html/test-document1.html
@@ -136,9 +136,9 @@
         data-end-offset="0"
         data-result-type="TextSourceElement"
         data-sentence-scan-extent="100"
-        data-sentence="よみちゃん"
+        data-sentence="よみたん"
     >
-        <button type="button" style="width: 100%; box-sizing: border-box; font-family: inherit; font-size: inherit; border: 1px solid #d8d8d8; background-color: #f0f0f0; padding: 0.2em;">よみちゃん</button>
+        <button type="button" style="width: 100%; box-sizing: border-box; font-family: inherit; font-size: inherit; border: 1px solid #d8d8d8; background-color: #f0f0f0; padding: 0.2em;">よみたん</button>
     </div>
 
     <div
@@ -152,9 +152,9 @@
         data-end-offset="0"
         data-result-type="TextSourceElement"
         data-sentence-scan-extent="100"
-        data-sentence="よみちゃん"
+        data-sentence="よみたん"
     >
-        <img src="data:image/gif;base64,R0lGODdhBwAHAIABAAAAAP///ywAAAAABwAHAAACDIRvEaC32FpCbEkKCgA7" alt="よみちゃん" title="よみちゃん" style="width: 70px; height: 70px; image-rendering: crisp-edges; image-rendering: pixelated; display: block;">
+        <img src="data:image/gif;base64,R0lGODdhBwAHAIABAAAAAP///ywAAAAABwAHAAACDIRvEaC32FpCbEkKCgA7" alt="よみたん" title="よみたん" style="width: 70px; height: 70px; image-rendering: crisp-edges; image-rendering: pixelated; display: block;">
     </div>
 
     <div
