capture all terminators and quotes in the sentence (#360)
* capture all terminators and quotes in the sentence

* fix negative position, add documents and tests

* fix comments giving wrong semantics

* add test case coverage

* remove cursor namespace for possible performance penalties

* while loop optimization

--- a/test/data/html/test-document1.html
+++ b/test/data/html/test-document1.html
@@ -94,6 +94,38 @@
     <div
         class="test"
         data-test-type="scan"
+        data-element-from-point-selector="span"
+        data-caret-range-from-point-selector="span"
+        data-start-node-selector="span"
+        data-start-offset="4"
+        data-end-node-selector="span"
+        data-end-offset="4"
+        data-result-type="TextSourceRange"
+        data-sentence-scan-extent="100"
+        data-sentence="ありがとございます。！？"
+    >
+        <span>ありがとございます。！？ありがとございます。！？</span>
+    </div>
+
+    <div
+        class="test"
+        data-test-type="scan"
+        data-element-from-point-selector="span"
+        data-caret-range-from-point-selector="span"
+        data-start-node-selector="span"
+        data-start-offset="4"
+        data-end-node-selector="span"
+        data-end-offset="4"
+        data-result-type="TextSourceRange"
+        data-sentence-scan-extent="100"
+        data-sentence="ありがとございます！！！"
+    >
+        <span>ありがとございます！！！ありがとございます！！！</span>
+    </div>
+
+    <div
+        class="test"
+        data-test-type="scan"
         data-element-from-point-selector="input"
         data-caret-range-from-point-selector="input"
         data-start-node-selector="input"
